glibc (2.3.1-7) unstable; urgency=high

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/packages.d/s390x.mk: typo fixed, s390x-linux should be
      ok to rebuild. (Closes: 173874)
    - debian/patches/glibc23-getdents64-fix.dpatch: Fix getdents64 
      failure on linux kernel 2.2. (Closes: #173913)

 -- GOTO Masanori <gotom@debian.or.jp>  Sun, 22 Dec 2002 01:35:43 +0900

glibc (2.3.1-6) unstable; urgency=low

  * Daniel Jacobowitz <dan@debian.org>
    - Update glibc23-ctype-compat.patch to fix segfaults in old static
      binaries (Closes: #171451).
    - Allow building from the CVS checkout without getting CVS dirs in the
      resulting packages.  Whew.

  * Jeff Bailey <jbailey@nisa.net>
    - debian/patches/cvs.dpatch: Update. 
      (Closes: #171550, #170507)
    - debian/patches/0list: Update
    - debian/control.in/libc: Conflict against wine (<< 0.0.20021007-1)
      (Closes: #170385)
      Also conflict against php4 (<< 4:4.2.3-5)
      Thanks to Steve Langasek for hunting this down!
    - debian/rules: Disable sparc64 build targets for now.
    - debian/packages.d/s390x.mx: Setup the 64 bit build as a cross-compile,
      because 's390' cannot run binaries intended for 's390x'

  * GOTO Masanori <gotom@debian.or.jp>
    - cvs.dpatch update resolve some bugs (Closes: #169919, #165603)
    - debian/patches/glibc23-hppa-Rminkernel.dpatch: Added hppa kernel
      version checking due to prevent people from installing unmatched version.
      Patched by Carlos O'Donell (Closes: #171804)
    - debian/libc/DEBIAN/preinst: likewise.
    - glibc23-function-compat.dpatch: Added for some bad application to
      keep running and not to resolve some symbols like __libc_wait,
      __libc_waitpid, so on. This patch will be removed when sarge will be
      relased apparently. (Closes: #165358, #173201)

    - debian/locales/DEBIAN/config: db_set is set if and only if locale.gen
      is existed.  Patched by Masato Taruishi <taru@debian.org>
      His note: