@@ -1,15 +1,22 @@
 glibc (2.3.1-7) unstable; urgency=high
 
+  * The "Climb Ev'ry Mountain" release.
+  
   * GOTO Masanori <gotom@debian.or.jp>
     - debian/packages.d/s390x.mk: typo fixed, s390x-linux should be
-      ok to rebuild. (Closes: 173874)
+      ok to rebuild. (Closes: #173874)
     - debian/patches/glibc23-getdents64-fix.dpatch: Fix getdents64 
       failure on linux kernel 2.2. (Closes: #173913)
+
+  * Jeff Bailey <jbailey@nisa.net>
+    - sysdeps/linux.mk: Finish disabling sparc64.
 
  -- GOTO Masanori <gotom@debian.or.jp>  Sun, 22 Dec 2002 01:35:43 +0900
 
 glibc (2.3.1-6) unstable; urgency=low
 
+  * The "I will not be thwarted" release.
+  
   * Daniel Jacobowitz <dan@debian.org>
     - Update glibc23-ctype-compat.patch to fix segfaults in old static
       binaries (Closes: #171451).
